writerfilter/source/rtftok/rtfdocumentimpl.hxx
@@ -270,6 +270,8 @@ public:
 
     /// Text from special destinations.
     OUStringBuffer aDestinationText;
+    /// point to the buffer of the current destination
+    OUStringBuffer * pDestinationText;
 
     /// Index of the current style.
     int nCurrentStyleIndex;
